# aman

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  PACKAGE_VERSION  README  acinclude.m4  aman.spec.in  autogen.sh  build_debs.sh.in  configure.ac  configure.in  get_distro.sh  get_target.sh  rc.amand.in
aman/: .gitignore  Makefile.am  aman.cpp  aman.h  connection.cpp  connection.h  statuslight.cpp  statuslight.h
amanctl/: Makefile.am  amanctl.cpp  amanctl.h
amand/: .gitignore  Makefile.am  amand.cpp  amand.h  audiostore.cpp  auto_rotate.cpp  generate_snapshot.cpp  pingmonitor.cpp  pingmonitor.h  replicationtest.cpp  replicationtest.h  restore_snapshot.cpp  set_metadata.cpp  streamcmdserver.cpp  streamcmdserver.h
amanrmt/: Makefile.am  amanrmt.cpp  amanrmt.h  restore_snapshot.cpp
conf/: Makefile.am  aman-mysql-limits.conf  aman.cnf-SystemA-rhel7-sample  aman.cnf-SystemB-rhel7-sample  aman.cnf-remote-rhel7-sample  aman.conf-sample  amanrmt.conf-sample  my.cnf-SystemA-sample  my.cnf-SystemB-rhel6-sample  rsync.xinetd-sample  rsyncd.conf-sample
debian/: Makefile.am  changelog.src  control  copyright  postinst  postrm  prerm  rules
debian/source/: Makefile.am
docs/: Makefile.am  amanctl.xml  command_protocol.txt  mysql_states.gxd
helpers/: Makefile.am
icons/: Makefile.am  aman-16x16.xpm  aman-22x22.xpm  aman-32x32.xpm  aman-48x48.xpm
lib/: Makefile.am  am.cpp  am.h  amcmdswitch.cpp  amcmdswitch.h  amconfig.cpp  amconfig.h  amconnection.cpp  amconnection.h  amprofile.cpp  amprofile.h  amprogressdialog.cpp  amprogressdialog.h  amsendmail.cpp  amsendmail.h  amstate.cpp  amstate.h  amstatuslight.cpp  amstatuslight.h  cmdswitch.cpp  cmdswitch.h  config.cpp  config.h  profile.cpp  profile.h  state.cpp  state.h
scripts/: Makefile.am  aman_add_remote_replication_user.pl  aman_add_replication_users.pl  aman_add_rivendell_user.pl
systemd/: Makefile.am  aman.service
tests/: Makefile.am  sqltorture.cpp  sqltorture.h
xdg/: Makefile.am  aman-aman.desktop  aman-amanrmt.desktop  aman-root-consolehelper  amanrmt-root-consolehelper
